Small changes+improvements